tests/spec/emit/snapshots/slice_copy_from.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(dst: mut Slice<int>, src: Slice<int>) -> int {
    dst.copy_from(src)
  }
---
package main

func test(dst, src []int) int {
	return copy(dst, src)
}
