tests/spec/emit/snapshots/slice_equals_keeps_user_equals_live.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Point { x: int }
  
  impl Point {
    fn equals(self, other: Point) -> bool {
      self.x == other.x
    }
  }
  
  fn test(a: Slice<Point>, b: Slice<Point>) -> bool {
    a.equals(b)
  }
---
package main

import "slices"

type Point struct {
	x int
}

func (p Point) equals(other Point) bool {
	return p.x == other.x
}

func test(a, b []Point) bool {
	return slices.EqualFunc(a, b, func(a_1 Point, b_1 Point) bool { return a_1.equals(b_1) })
}
