tests/spec/emit/snapshots/slice_equals_negated.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Slice<int>, b: Slice<int>) -> bool {
    !a.equals(b)
  }
---
package main

import "slices"

func test(a, b []int) bool {
	return !slices.Equal(a, b)
}
