tests/spec/emit/snapshots/slice_equals_ufcs.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Slice<int>, b: Slice<int>) -> bool {
    Slice.equals(a, b)
  }
---
package main

import "slices"

func test(a, b []int) bool {
	return slices.Equal(a, b)
}
