tests/spec/emit/snapshots/slice_extend.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Slice<int>, b: Slice<int>) -> Slice<int> {
    a.extend(b)
  }
---
package main

func test(a, b []int) []int {
	return append(a, b...)
}
