tests/spec/emit/snapshots/slice_extend_reassign.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(items: Slice<int>, b: Slice<int>) {
    let mut a = items
    a = a.extend(b)
  }
---
package main

func test(items, b []int) {
	a := items
	a = append(a, b...)
}
