tests/spec/emit/snapshots/slice_extend_statement.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(items: Slice<int>, extra: Slice<int>) -> Slice<int> {
    let mut s = items
    s = s.extend(extra)
    s
  }
---
package main

func test(items, extra []int) []int {
	s := items
	s = append(s, extra...)
	return s
}
