tests/spec/emit/snapshots/slice_filter.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.filter(|x| x > 0)
  }
---
package main

func test(s []int) []int {
	var result []int
	for _, x := range s {
		if x > 0 {
			result = append(result, x)
		}
	}
	return result
}
