tests/spec/emit/snapshots/slice_filter_with_an_unused_parameter_names_the_element.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.filter(|_x| true)
  }
---
package main

func test(s []int) []int {
	var result []int
	for _, v := range s {
		if true {
			result = append(result, v)
		}
	}
	return result
}
