tests/spec/emit/snapshots/slice_find.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Option<int> {
    s.find(|x| x > 0)
  }
---
package main

func test(s []int) (int, bool) {
	for _, x := range s {
		if x > 0 {
			return x, true
		}
	}
	return 0, false
}
